added fonts for black and white flags

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mea+Culpa&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Hubot+Sans:ital,wght@0,200..900;1,200..900&family=Mea+Culpa&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Alumni+Sans+Pinstripe:ital@0;1&family=Hubot+Sans:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">    
+    <link href="https://fonts.googleapis.com/css2?family=Coral+Pixels&display=swap" rel="stylesheet">
+
     <title>NaughtSea w Vite + Vue + TS</title>
   </head>
   <body class="bg-sky-950 text-sky-300 bg-[url('/public/NaughtSea.png')] bg-cover bg-center h-64 w-full">
