--- a/index.html
+++ b/index.html
@@ -2,18 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/public/boat.ico" />
+    <link rel="icon" type="image/svg+xml" href="/boat.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mea+Culpa&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Hubot+Sans:ital,wght@0,200..900;1,200..900&family=Mea+Culpa&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Alumni+Sans+Pinstripe:ital@0;1&family=Hubot+Sans:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">    
-    <link href="https://fonts.googleapis.com/css2?family=Coral+Pixels&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&family=Rajdhani:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <title>NaughtSea+Vite+Vue+TS⛵</title>
   </head>
-  <body class="bg-sky-950 text-sky-300 bg-[url('/public/NaughtSea.png')] bg-cover bg-center h-64 w-full">
+  <body class="bg-sky-950 text-sky-300 bg-[url('/NaughtSea.png')] bg-cover bg-center h-64 w-full">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
