--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Hubot+Sans:ital,wght@0,200..900;1,200..900&family=Mea+Culpa&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Alumni+Sans+Pinstripe:ital@0;1&family=Hubot+Sans:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">    
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&family=Rajdhani:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Coral+Pixels&display=swap" rel="stylesheet">
     <title>NaughtSea+Vite+Vue+TS⛵</title>
   </head>
   <body class="bg-sky-950 text-sky-300 bg-[url('/NaughtSea.png')] bg-cover bg-center h-64 w-full">
