--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Coral+Pixels&display=swap" rel="stylesheet">
     <title>NaughtSea+Vite+Vue+TS⛵</title>
   </head>
-  <body class="bg-sky-950 text-sky-300 bg-[url('/NaughtSea.png')] bg-cover bg-center h-64 w-full">
+  <body class="bg-sky-950 text-sky-300">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
