--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     <title>NaughtSea+Vite+Vue+TS⛵</title>
   </head>
   <body class="bg-sky-950 text-sky-300">
-    <div id="app"></div>
+    <div id="app">
+      
+    </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
