--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Alumni+Sans+Pinstripe:ital@0;1&family=Hubot+Sans:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">    
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&family=Rajdhani:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Coral+Pixels&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Anonymous+Pro:ital,wght@0,400;0,700;1,400;1,700&family=Updock&display=swap" rel="stylesheet">    
     <title>NaughtSea+Vite+Vue+TS⛵</title>
   </head>
   <body class="bg-sky-950 text-sky-300">
